--- a/start.html
+++ b/start.html
@@ -17,179 +17,183 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="bottom-part"">
-    <div class="container">
-      <h1>Our Charity</h1>
-      <div class="row row-cols-2 row-cols-md-4">
-        <div class="col">
-          <img src="./image/wwf.png" class="img-thumbnail" alt="wwf" />
+    <div class="bottom-part">
+      <div class="container">
+        <h1>Our Charity</h1>
+        <div class="row row-cols-2 row-cols-md-4">
+          <div class="col">
+            <img src="./image/wwf.png" class="img-thumbnail" alt="wwf" />
+          </div>
+          <div class="col">
+            <img
+              src="./image/box of hope.jpeg"
+              class="img-thumbnail"
+              alt="box of hope"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="./image/Clean Air Network.jpeg"
+              class="img-thumbnail"
+              alt="clean air network"
+            />
+          </div>
+          <div class="col">
+            <img src="./image/pok oi .png" class="img-thumbnail" alt="Pok Oi" />
+          </div>
         </div>
-        <div class="col">
-          <img
-            src="./image/box of hope.jpeg"
-            class="img-thumbnail"
-            alt="box of hope"
-          />
+
+        <div class="row row-cols-2 row-cols-md-4">
+          <div class="col">
+            <img
+              src="./image/habitat for humanity.png"
+              class="img-thumbnail"
+              alt="habitat for humanity"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="./image/hands on .png"
+              class="img-thumbnail"
+              alt="hands on"
+            />
+          </div>
+          <div class="col">
+            <img src="./image/hkdr .png" class="img-thumbnail" alt="HKDR" />
+          </div>
+          <div class="col">
+            <img
+              src="./image/cancer fund .png"
+              class="img-thumbnail"
+              alt="Cancer Fund"
+            />
+          </div>
         </div>
-        <div class="col">
-          <img
-            src="./image/Clean Air Network.jpeg"
-            class="img-thumbnail"
-            alt="clean air network"
-          />
-        </div>
-        <div class="col">
-          <img src="./image/pok oi .png" class="img-thumbnail" alt="Pok Oi" />
-        </div>
+      </div>
+      <div class="btn-section">
+        <button type="button" class="btn btn-outline-danger">
+          See All Charities
+        </button>
       </div>
 
-      <div class="row row-cols-2 row-cols-md-4">
-        <div class="col">
-          <img
-            src="./image/habitat for humanity.png"
-            class="img-thumbnail"
-            alt="habitat for humanity"
-          />
-        </div>
-        <div class="col">
-          <img
-            src="./image/hands on .png"
-            class="img-thumbnail"
-            alt="hands on"
-          />
-        </div>
-        <div class="col">
-          <img src="./image/hkdr .png" class="img-thumbnail" alt="HKDR" />
-        </div>
-        <div class="col">
-          <img
-            src="./image/cancer fund .png"
-            class="img-thumbnail"
-            alt="Cancer Fund"
-          />
-        </div>
-      </div>
-    </div>
-    <div class="btn-section">
-      <button type="button" class="btn btn-outline-danger">
-        See All Charities
-      </button>
-    </div>
-
-    <!-- Carousel -->
-    <h1>What Our Users Say</h1>
-    <div
-      id="carouselExampleControlsNoTouching"
-      class="carousel slide"
-      data-bs-touch="false"
-      data-bs-interval="false"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="quote">
-            <p>
-              “At our wedding, we chose Twopresents so that our guests can
-              choose to donate to the organisations of our choices. I hope my
-              kid would be mindful of the beautiful planet that we’re living in,
-              and the whole concept of gift-giving can be thought in a very
-              different way.”
-            </p>
-          </div>
-          <div class="writer">
-            <img
-              src="./image/Robynn Yip.png"
-              alt="..."
-              width="100px"
-              class="writer-photo"
-            />
-            <p>Robynn Yip</p>
-            <p>Singer Songwriter</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="quote">
-            <p>
-              “At our wedding, we chose Twopresents so that our guests can
-              choose to donate to the organisations of our choices. I hope my
-              kid would be mindful of the beautiful planet that we’re living in,
-              and the whole concept of gift-giving can be thought in a very
-              different way.”
-            </p>
-          </div>
-          <div class="writer">
-            <img
-              src="./image/Robynn Yip.png"
-              alt="..."
-              width="100px"
-              class="writer-photo"
-            />
-            <p>Robynn Yip</p>
-            <p>Singer Songwriter</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="quote">
-            <p>
-              “At our wedding, we chose Twopresents so that our guests can
-              choose to donate to the organisations of our choices. I hope my
-              kid would be mindful of the beautiful planet that we’re living in,
-              and the whole concept of gift-giving can be thought in a very
-              different way.”
-            </p>
-          </div>
-          <div class="writer">
-            <img
-              src="./image/Robynn Yip.png"
-              alt="..."
-              width="100px"
-              class="writer-photo"
-            />
-            <p>Robynn Yip</p>
-            <p>Singer Songwriter</p>
-          </div>
-        </div>
-      </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleControlsNoTouching"
-        data-bs-slide="prev"
+      <!-- Carousel -->
+      <h1>What Our Users Say</h1>
+      <div
+        id="carouselExampleControlsNoTouching"
+        class="carousel slide"
+        data-bs-touch="false"
+        data-bs-interval="false"
       >
-        <i
-          class="bi-arrow-left-circle"
-          style="color: black; font-size: 50px"
-        ></i>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleControlsNoTouching"
-        data-bs-slide="next"
-      >
-        <i
-          class="bi-arrow-right-circle"
-          style="color: black; font-size: 50px"
-        ></i>
-      </button>
-    </div>
-    <div class="container subscribe">
-      <div class="row">
-        <div class="col-12">
-          <h1>Save Twopresents For Your Next Event!</h1>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="quote">
+              <p>
+                “At our wedding, we chose Twopresents so that our guests can
+                choose to donate to the organisations of our choices. I hope my
+                kid would be mindful of the beautiful planet that we’re living
+                in, and the whole concept of gift-giving can be thought in a
+                very different way.”
+              </p>
+            </div>
+            <div class="writer">
+              <img
+                src="./image/Robynn Yip.png"
+                alt="..."
+                width="100px"
+                class="writer-photo"
+              />
+              <p>Robynn Yip</p>
+              <p>Singer Songwriter</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="quote">
+              <p>
+                “At our wedding, we chose Twopresents so that our guests can
+                choose to donate to the organisations of our choices. I hope my
+                kid would be mindful of the beautiful planet that we’re living
+                in, and the whole concept of gift-giving can be thought in a
+                very different way.”
+              </p>
+            </div>
+            <div class="writer">
+              <img
+                src="./image/Robynn Yip.png"
+                alt="..."
+                width="100px"
+                class="writer-photo"
+              />
+              <p>Robynn Yip</p>
+              <p>Singer Songwriter</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="quote">
+              <p>
+                “At our wedding, we chose Twopresents so that our guests can
+                choose to donate to the organisations of our choices. I hope my
+                kid would be mindful of the beautiful planet that we’re living
+                in, and the whole concept of gift-giving can be thought in a
+                very different way.”
+              </p>
+            </div>
+            <div class="writer">
+              <img
+                src="./image/Robynn Yip.png"
+                alt="..."
+                width="100px"
+                class="writer-photo"
+              />
+              <p>Robynn Yip</p>
+              <p>Singer Songwriter</p>
+            </div>
+          </div>
         </div>
-        <div class="col-12 col-md-10" style="margin: auto">
-          <form>
-            <input
-              type="text"
-              id="disabledTextInput"
-              class="form-control"
-              placeholder="Email Address"
-            />
-          </form>
-        </div>
-        <div class="col-1 col-md-2">
-          <button type="button" class="btn btn-danger">Danger</button>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControlsNoTouching"
+          data-bs-slide="prev"
+        >
+          <i
+            class="bi-arrow-left-circle"
+            style="color: black; font-size: 50px"
+          ></i>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControlsNoTouching"
+          data-bs-slide="next"
+        >
+          <i
+            class="bi-arrow-right-circle"
+            style="color: black; font-size: 50px"
+          ></i>
+        </button>
+      </div>
+      <div class="container subscribe">
+        <div class="row">
+          <div class="col-12">
+            <h1>Save Twopresents For Your Next Event!</h1>
+          </div>
+          <div class="col-md-9" style="margin: auto">
+            <form>
+              <input
+                type="text"
+                id="disabledTextInput"
+                class="form-control"
+                placeholder="Email Address"
+              />
+            </form>
+          </div>
+          <div class=" col-md-3">
+            <div class="btn-section">
+              <button type="button" class="btn btn-danger">
+                Remind Me
+              </button>
+            </div>
         </div>
       </div>
     </div>
@@ -228,66 +232,48 @@
         </div>
       </div>
     </div>
-
-    <!-- Footer -->
-    <footer class="text-lg-start text-muted">
-      <!-- Section: Links  -->
-      <div class="container text-center text-md-start mt-5">
-        <!-- Grid row -->
+<!-- footer -->
+    <footer>
+      <div class="container">
         <div class="row">
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <!-- Content -->
-            <div class="follow-us">
-              <h6 class="text-uppercase fw-bold">Follow Us</h6>
-              <i class="fa-brands fa-facebook" style="font-size: 40px"></i>
-              <i class="fa-brands fa-facebook" style="font-size: 40px"></i>
-              <i class="fa-brands fa-facebook" style="font-size: 40px"></i>
+          <div class="col-lg-5 col-xs-6">
+            <div class="single-box">
+              <div class="follow-us ">
+                <h2>Follow Us</h2>
+                <p class="socials">
+                  <i class="fa fa-facebook"></i>
+                  <i class="fa fa-dribbble"></i>
+                  <i class="fa fa-pinterest"></i>
+                </p>
+              </div>
+              <div class="support-us">
+                <h2>Support Us</h2>
+                <button type="button" class="btn btn-danger">
+                  Remind Me
+                </button>
+              </div>
             </div>
+          </div>
+          <div class="col-lg-7 col-sm-12 col-xs-12">
+            <div class="single-box about-us">
+              <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Contact Us</a></li>
 
-            <div class="support-us">
-              <h6 class="text-uppercase fw-bold mb-1">Support Us</h6>
-              <button type="button" class="btn btn-outline-danger btn-light">
-                Danger
-              </button>
+                <div class="card-area">
+                  <i class="fa fa-cc-visa"></i>
+                  <i class="fa fa-cc-mastercard"></i>
+                  <i class="fa fa-cc-paypal"></i>
+                </div>
+              </ul>
+              <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of service</a></li>
+              </ul>
             </div>
           </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <p>
-              <a href="#!" class="text-reset">About Us</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Press</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">FAQs</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Contact Us</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <p>
-              <a href="#!" class="text-reset">Privacy</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Term of Service</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <!-- Grid column -->
-        </div>
-        <!-- Grid row -->
       </div>
       <!-- Section: Links  -->
 
