--- a/home.html
+++ b/home.html
@@ -1,16 +1,330 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>TwoPresents</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="bottom-part">
+      <div class="container">
+        <h1>Our Charity</h1>
+        <div class="row row-cols-2 row-cols-md-4">
+          <div class="col">
+            <img src="/image/wwf.png" class="img-thumbnail" alt="wwf" />
+          </div>
+          <div class="col">
+            <img
+              src="/image/box of hope.jpeg"
+              class="img-thumbnail"
+              alt="box of hope"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="/image/Clean Air Network.jpeg"
+              class="img-thumbnail"
+              alt="clean air network"
+            />
+          </div>
+          <div class="col">
+            <img src="/image/pok oi .png" class="img-thumbnail" alt="Pok Oi" />
+          </div>
+        </div>
+
+        <div class="row row-cols-2 row-cols-md-4">
+          <div class="col">
+            <img
+              src="/image/habitat for humanity.png"
+              class="img-thumbnail"
+              alt="habitat for humanity"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="/image/hands on .png"
+              class="img-thumbnail"
+              alt="hands on"
+            />
+          </div>
+          <div class="col">
+            <img src="/image/hkdr .png" class="img-thumbnail" alt="HKDR" />
+          </div>
+          <div class="col">
+            <img
+              src="/image/cancer fund .png"
+              class="img-thumbnail"
+              alt="Cancer Fund"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="btn-section">
+        <button type="button" class="btn btn-outline-danger">
+          See All Charities
+        </button>
+      </div>
+
+      <!-- Carousel -->
+      <h1>What Our Users Say</h1>
+      <div
+        id="carouselExampleControlsNoTouching"
+        class="carousel slide"
+        data-bs-touch="false"
+        data-bs-interval="false"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="quote">
+              <p>
+                “At our wedding, we chose Twopresents so that our guests can
+                choose to donate to the organisations of our choices. I hope my
+                kid would be mindful of the beautiful planet that we’re living
+                in, and the whole concept of gift-giving can be thought in a
+                very different way.”
+              </p>
+            </div>
+            <div class="writer">
+              <img
+                src="/image/Robynn Yip.png"
+                alt="..."
+                width="100px"
+                class="writer-photo"
+              />
+              <p>Robynn Yip</p>
+              <p>Singer Songwriter</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="quote">
+              <p>
+                “At our wedding, we chose Twopresents so that our guests can
+                choose to donate to the organisations of our choices. I hope my
+                kid would be mindful of the beautiful planet that we’re living
+                in, and the whole concept of gift-giving can be thought in a
+                very different way.”
+              </p>
+            </div>
+            <div class="writer">
+              <img
+                src="./image/Robynn Yip.png"
+                alt="..."
+                width="100px"
+                class="writer-photo"
+              />
+              <p>Robynn Yip</p>
+              <p>Singer Songwriter</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="quote">
+              <p>
+                “At our wedding, we chose Twopresents so that our guests can
+                choose to donate to the organisations of our choices. I hope my
+                kid would be mindful of the beautiful planet that we’re living
+                in, and the whole concept of gift-giving can be thought in a
+                very different way.”
+              </p>
+            </div>
+            <div class="writer">
+              <img
+                src="/image/Robynn Yip.png"
+                alt="..."
+                width="100px"
+                class="writer-photo"
+              />
+              <p>Robynn Yip</p>
+              <p>Singer Songwriter</p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControlsNoTouching"
+          data-bs-slide="prev"
+        >
+          <i
+            class="bi-arrow-left-circle"
+            style="color: black; font-size: 50px"
+          ></i>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControlsNoTouching"
+          data-bs-slide="next"
+        >
+          <i
+            class="bi-arrow-right-circle"
+            style="color: black; font-size: 50px"
+          ></i>
+        </button>
+      </div>
+      <div class="container subscribe">
+        <div class="row">
+          <div class="col-12">
+            <h1>Save Twopresents For Your Next Event!</h1>
+          </div>
+          <div class="col-md-9" style="margin: auto">
+            <form>
+              <input
+                type="text"
+                id="disabledTextInput"
+                class="form-control"
+                placeholder="Email Address"
+              />
+            </form>
+          </div>
+          <div class=" col-md-3">
+            <div class="btn-section">
+              <button type="button" class="btn btn-danger">
+                Remind Me
+              </button>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="feature">
+      <h5>Featured In</h5>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-4">
+          <div class="col">
+            <img
+              src="/image/caringCompany.png"
+              class="img-thumbnail"
+              alt="wwf"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="/image/caringCompany.png"
+              class="img-thumbnail"
+              alt="box of hope"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="/image/caringCompany.png"
+              class="img-thumbnail"
+              alt="clean air network"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="/image/caringCompany.png"
+              class="img-thumbnail"
+              alt="Pok Oi"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+<!-- footer -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 col-xs-6">
+            <div class="single-box">
+              <div class="follow-us ">
+                <h2>Follow Us</h2>
+                <p class="socials">
+                  <i class="fa fa-facebook"></i>
+                  <i class="fa fa-dribbble"></i>
+                  <i class="fa fa-pinterest"></i>
+                </p>
+              </div>
+              <div class="support-us">
+                <h2>Support Us</h2>
+                <button type="button" class="btn btn-danger">
+                  Remind Me
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-7 col-sm-12 col-xs-12">
+            <div class="single-box about-us">
+              <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Contact Us</a></li>
+
+                <div class="card-area">
+                  <i class="fa fa-cc-visa"></i>
+                  <i class="fa fa-cc-mastercard"></i>
+                  <i class="fa fa-cc-paypal"></i>
+                </div>
+              </ul>
+              <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of service</a></li>
+              </ul>
+            </div>
+          </div>
+      </div>
+      <!-- Section: Links  -->
+
+      <!-- Copyright -->
+      <!-- <div class="p-4"> -->
+      <div class="sponsor container p-4">
+        <div class="row row-cols-1 row-cols-md-4">
+          <div class="col">
+            <img
+              src="/image/caringCompany.png"
+              class="img-thumbnail"
+              alt="wwf"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="/image/caringCompany.png"
+              class="img-thumbnail"
+              alt="box of hope"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="/image/caringCompany.png"
+              class="img-thumbnail"
+              alt="clean air network"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="/image/caringCompany.png"
+              class="img-thumbnail"
+              alt="Pok Oi"
+            />
+          </div>
+        </div>
+        <!-- </div> -->
+      </div>
+      <p class="copyright">Copyright © Twopresents 2023</p>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
     <script
-      type="text/javascript"
-      src="./js/infinite_scrolling_animation.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="./js/number_counter.js"></script>
+    <script
+      src="https://kit.fontawesome.com/7da664cad6.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
