--- a/home.html
+++ b/home.html
@@ -704,7 +704,7 @@
         </div>
         <div class="btn-section">
           <button type="button" class="btn btn-outline-danger">
-            See All Charities
+            See All Charities fdfdgf
           </button>
         </div>
   
