--- a/start.html
+++ b/start.html
@@ -57,20 +57,22 @@
               id="auto-layout-horizontal2"
             >
               <li class="nav-item mt-3 mt-lg-0 g-5">
-                <a class="nav-link main-nav p-0" href="#" id="how-it-works3"
+                <a class="nav-link primary-nav p-0" href="#" id="how-it-works3"
                   >How It Works</a
                 >
               </li>
               <li class="nav-item mt-3 mt-lg-0 pt-1 pt-lg-0">
-                <a class="nav-link main-nav p-0" href="#" id="cards">Cards</a>
+                <a class="nav-link primary-nav p-0" href="#" id="cards"
+                  >Cards</a
+                >
               </li>
               <li class="nav-item mt-3 mt-lg-0 pt-1 pt-lg-0">
-                <a class="nav-link main-nav p-0" href="#" id="charities"
+                <a class="nav-link primary-nav p-0" href="#" id="charities"
                   >Charities</a
                 >
               </li>
               <li class="nav-item mt-3 mt-lg-0 pt-1 pt-lg-0">
-                <a class="nav-link main-nav p-0" href="#" id="gift-ideas"
+                <a class="nav-link primary-nav p-0" href="#" id="gift-ideas"
                   >Gift Ideas</a
                 >
               </li>
@@ -261,14 +263,14 @@
       </div>
     </div>
 
-     <!-- footer -->
-     <footer>
+    <!-- footer -->
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-5 col-xs-6">
             <div class="single-box">
               <div class="follow-us">
-                <h2 style="color: #fff;">Follow Us</h2>
+                <h2 style="color: #fff">Follow Us</h2>
                 <p class="socials">
                   <img src="./image/Facebook.svg" alt="Facebook" />
                   <img src="./image/Instagram.svg" alt="Instagram" />
@@ -277,9 +279,7 @@
               </div>
               <div class="support-us">
                 <h2 style="color: #fff">Support Us</h2>
-                <button type="button" class="btn btn-danger">
-                  Remind Me
-                </button>
+                <button type="button" class="btn btn-danger">Remind Me</button>
               </div>
             </div>
           </div>
@@ -332,11 +332,7 @@
               />
             </div>
             <div class="col">
-              <img
-                src="./image/Dbs .png"
-                class="img-thumbnail"
-                alt="Pok Oi"
-              />
+              <img src="./image/Dbs .png" class="img-thumbnail" alt="Pok Oi" />
             </div>
           </div>
           <!-- </div> -->
@@ -346,9 +342,6 @@
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
-  </div>
-
-   
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
